--- a/css/responsive.scss
+++ b/css/responsive.scss
@@ -154,8 +154,8 @@
         margin-top: 20px;
     }
     .hero-section {
-        min-height: 65vh;
-        align-items: flex-end;
+        min-height: 100vh;
+        align-items: center;
         padding: 100px 0;
     }
     .technical_skill ul.owl-carousel .owl-nav {
@@ -229,7 +229,7 @@
         margin-bottom: 25px;
     }
     .hero-section {
-        min-height: 85vh;
+        min-height: 100vh;
     }
     .hero-section .hero-caption .hero-buttons {
         margin-top: 30px;
