--- a/css/responsive.css
+++ b/css/responsive.css
@@ -176,6 +176,13 @@
     width: 150px;
     font-size: 16px;
   }
+  .projects_section .projects .card-group .card .body-card .overlay-content h1 {
+    font-size: 20px;
+  }
+  .projects_section .projects .card-group .card .body-card .overlay-content a {
+    padding: 10px 20px;
+    font-size: 14px;
+  }
 }
 
 @media (max-width: 575px) {
