--- a/css/main.scss
+++ b/css/main.scss
@@ -257,7 +257,7 @@ header{
   top: 0;
   left: 0;
   z-index: 1030;
-  transition: all 0.5s ease-in-out;
+  // transition: all 0.5s ease-in-out;
   .navbar{
     padding: 0;
     transition: all 0.5s ease-in-out;
